# core-lib

./: .gitignore  CMakeLists.txt  README.md
include/doom/: Algorithm.h  Numeric.h  String.h  TypeTraits.h  Utility.h
test/: CMakeLists.txt  test_algorithm.cpp  test_numeric.cpp
